@@ -99,6 +99,9 @@ Trunk (unreleased changes)
     HADOOP-7233. Refactor ls to conform to new FsCommand class.  (Daryn Sharp
     via szetszwo)
 
+    HADOOP-7235. Refactor the tail command to conform to new FsCommand class.
+    (Daryn Sharp via szetszwo)
+
   OPTIMIZATIONS
 
   BUG FIXES
